--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Classic Animated Navbar</title>
+    <title>Farm Field</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <!-- AOS Scroll Animation -->
 <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
@@ -14,7 +14,7 @@
     <nav class="navbar">
         <a href="#" class="logo">
             <i class="fas fa-sparkles logo-icon"></i>
-            <span class="logo-text">SHOURYAANGA</span>
+            <span class="logo-text">🌿Farm Field</span>
         </a>
         
         <div class="hamburger">
@@ -38,7 +38,7 @@
       
         <div class="glass-box" id="box">
           <h1 class="hero-text">
-            The Crop <span id="typed-word">Analysis</span><span class="cursor"></span>
+            The Crop Analysis<span class="cursor"></span>
           </h1>
         </div>
       </section>
@@ -98,7 +98,7 @@
 
       <section id="Predictor">
         <section class="animated-box-section" id="predictor">
-          <h2 class="section-title">Crop Predictor</h2>
+          <br><br><h2 class="section-title">Crop Predictor</h2>
           <div class="three-d-box">
               <img src="main.jpg" alt="Crop" class="box-image">
               <a href="https://abhishek-nadagiri.github.io/croppredictor/" target="_blank"><button class="box-button">Click to predict</button></a></div>
@@ -107,7 +107,7 @@
       </section>
 
       <section class="soil-table-section" id="analysis">
-        <h2 class="soil-heading">Analyzed Soil Health Report</h2>
+        <br><br><h2 class="soil-heading">Analyzed Soil Health Report</h2>
         <div class="table-3d-wrapper">
             <table class="soil-table-3d">
                 <thead>
@@ -268,12 +268,11 @@
   
     <div class="swiper myGallerySwiper">
       <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="field.jpg" alt="Slide 1"></div>
-        <div class="swiper-slide"><img src="field.jpg" alt="Slide 2"></div>
-        <div class="swiper-slide"><img src="field.jpg" alt="Slide 3"></div>
-        <div class="swiper-slide"><img src="field.jpg" alt="Slide 4"></div>
-        <div class="swiper-slide"><img src="field.jpg" alt="Slide 5"></div>
-        <div class="swiper-slide"><img src="field.jpg" alt="Slide 6"></div>
+        <div class="swiper-slide"><img src="slide2.jpg" alt="Slide 1"></div>
+        <div class="swiper-slide"><img src="slide1.jpg" alt="Slide 2"></div>
+        <div class="swiper-slide"><img src="slide4.jpg" alt="Slide 3"></div>
+        <div class="swiper-slide"><img src="slide3.jpg" alt="Slide 4"></div>
+        <div class="swiper-slide"><img src="slide5.jpg" alt="Slide 5"></div>
       </div>
   
       <!-- Navigation Arrows -->
@@ -313,6 +312,17 @@
     speed: 900, 
   });
 </script>
+<script>
+  const footer = document.querySelector('.footer');
+  window.addEventListener('scroll', () => {
+      const triggerPoint = window.innerHeight - 100;
+      if (footer.getBoundingClientRect().top < triggerPoint) {
+          footer.style.opacity = '1';
+          footer.style.transform = 'translateY(0)';
+      }
+  });
+</script>
+
 
 
 <!-- gallery script ends -->
@@ -322,6 +332,10 @@
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 <script>AOS.init({ once: true, duration: 1200 });</script>
+<footer class="footer">
+  <div class="footer-signature">Design by <strong>team Shouryaanga</strong> ⚔️</div>
+</footer>
+
 
 </body>
 </html>
